[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61" ]

[project]
name = "pylikwid"
version = "0.4.2"
description = "A Python module to access the function of the LIKWID library"
readme = "README.rst"
keywords = [ "analysis", "benchmark", "hpc", "performance" ]
license = { file = "LICENSE" }
authors = [
  { name = "Thomas Roehl", email = "thomas.roehl@googlemail.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
  "Topic :: Utilities",
]

optional-dependencies.test = [ "pytest" ]
urls.Homepage = "https://github.com/RRZE-HPC/pylikwid"

[tool.setuptools]
packages = [ "pylikwid" ]
package-dir = { "" = "src" }

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test*.py" ]

